@@ -1,8 +1,7 @@
-"""Since Python version 3.8, a method decorated with typing.final cannot be
-overridden"""
+"""A method decorated with typing.final cannot be overridden"""
 
 # pylint: disable=no-init, import-error, invalid-name, using-constant-test, useless-object-inheritance
-# pylint: disable=missing-docstring, too-few-public-methods
+# pylint: disable=missing-docstring, too-few-public-methods, no-name-in-module, using-final-in-unsupported-version
 
 from typing import final
 
