@@ -1,2 +1,0 @@
-[testoptions]
-min_pyver=3.8
