@@ -1,0 +1,2 @@
+[typing]
+py-version=3.7
